Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-11632

DPRINT if unimplemented HalpQueryInterface receives two known requests

    XMLWordPrintable

Details

    Description

      This patch adds more precise debug lines if ACPI_REGS_INTERFACE_STANDARD and/or ACPI_PORT_RANGES_INTERFACE_STANDARD are requested of hal by acpi.sys (which happened when tried to use another ACPI driver, that crashed, just to understand why yet another ACPI driver fails). Not that it helps to understand anything major, as these interfaces are undocumented.

      Attachments

        Activity

          People

            Serge Gautherie Serge Gautherie
            CircularTriangle06 CircularTriangle06
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated: