[HALX86] HalpQueryInterface(): Debug log InterfaceType param

Based on CircularTriangle06's patch.
CORE-11632