hal/halx86/legacy/halpnpdd.c
@@ -145,7 +145,12 @@ HalpQueryInterface(IN PDEVICE_OBJECT DeviceObject,
                    IN PINTERFACE Interface,
                    OUT PULONG Length)
 {
-    UNIMPLEMENTED;
+    DPRINT1("HalpQueryInterface({%08X-%04X-%04X-%02X%02X-%02X%02X%02X%02X%02X%02X}) is UNIMPLEMENTED\n",
+            InterfaceType->Data1, InterfaceType->Data2, InterfaceType->Data3,
+            InterfaceType->Data4[0], InterfaceType->Data4[1],
+            InterfaceType->Data4[2], InterfaceType->Data4[3],
+            InterfaceType->Data4[4], InterfaceType->Data4[5],
+            InterfaceType->Data4[6], InterfaceType->Data4[7]);
     return STATUS_NOT_SUPPORTED;
 }
 
